<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Simple Stats</string>

  <string name="OK">OK</string>
  <string name="Analyze">Analyze</string>
  <string name="sampleHint">Enter numbers</string>
  <string name="pairedSampleHint">Enter pairs of numbers</string>
  <string name="tableSampleHint">Enter cell counts</string>

  <string name="Sample">Sample</string>
  <string name="size">size</string>
  <string name="Min">Min</string>
  <string name="Max">Max</string>
  <string name="Median">Median</string>
  <string name="Mean">Mean</string>
  <string name="Variance">Variance</string>
  <string name="StdDev">Std. Dev.</string>
  <string name="PearsonR">Pearson Correlation</string>
  <string name="TestOfH0">Test of H₀</string>
  <string name="Probability">Probability</string>
  <string name="oneTailed">1-tailed</string>
  <string name="twoTailed">2-tailed</string>
  <string name="dof">d.o.f.</string>
  <string name="dofs">d.o.f.s</string>
  <string name="assuming">assuming</string>
  <string name="LinearRegression">Linear regression</string>
  <string name="TestOfIndependence">Test of independence</string>
  <string name="FishersExactTest">Fisher\'s Exact Test</string>
  <string name="YatesCorrection">Yates\'s correction</string>

  <string name="DataAnalysis">Data Analysis</string>
  <string name="Help">Help</string>
  <string name="AboutHypotheses">About Hypotheses</string>
  <string name="About">About</string>

  <string name="NoDataError">No data were entered for analysis.</string>
  <string name="NotEnoughForTestError">Not enough sample data for statistical test.</string>

  <string name="mean_Title">Mean</string>
  <string name="mean_sampleDataPrompt">Sample data:</string>
  <string name="mean_H0Prompt">"H₀: µ"</string>
  <string name="mean_H1Prompt">"H₁: µ"</string>

  <string name="means_Title">Means</string>
  <string name="means_sample1DataPrompt">Sample 1 data:</string>
  <string name="means_sample2DataPrompt">Sample 2 data:</string>
  <string name="means_H0Prompt">"H₀: µ₁"</string>
  <string name="means_H1Prompt">";  H₁: µ₁"</string>
  <string name="means_Mu2">"µ₂"</string>

  <string name="correlation_Title">Correlation</string>
  <string name="correlation_sampleDataPrompt">Sample data:</string>
  <string name="correlation_oddNumberError">"An odd number of numbers was entered: "</string>
  <string name="correlation_H0Prompt">"H₀: ρ"</string>
  <string name="correlation_H1Prompt">";  H₁: ρ"</string>
  <string name="correlation_0">"0"</string>

  <string name="contingency_Title">Contingency</string>
  <string name="contingency_TableSize">"Table size: "</string>
  <string name="contingency_x">" x "</string>
  <string name="contingency_rowsXcols">" (rows x columns)"</string>
  <string name="contingency_sampleDataPrompt">Sample data:</string>
  <string name="contingency_sampleSize">Sample size</string>
  <string name="contingency_rowTotals">Row totals</string>
  <string name="contingency_columnTotals">Column totals</string>
  <string name="contingency_tooFewRowsColsError">At least 2 non-zero rows and columns are required.</string>
  <string name="contingency_wrongNumberOfEntriesError">"The wrong number of counts were entered: "</string>
  <string name="contingency_negativeCountError">Frequency counts cannot be negative.</string>

  <string name="help_menu_label">Help</string>
  <string name="hypotheses_menu_label">Hypotheses</string>
  <string name="about_menu_label">About</string>

  <string name="mean_help_text">
The Mean test analyzes a random sample of real numbers from a population with an approximately normal distribution.
\n
\nEnter the sample data however you want. The numbers can be separated by almost anything: newlines, spaces, punctuation, or even text. Then select the hypothesized relation and value, and click Analyze.
\n
\nSample statistics computed are: minimum and maximum (useful for checking for data-entry errors), median (50th percentile), mean (average), and standard deviation (the square root of the unbiased variance estimate).
\n
\nThe t test tests an hypothesis about the population mean, µ, namely whether it is less than (or greater than or simply not equal to) a specified value.
  </string> <!--mean_help_text-->

  <string name="means_help_text">
The Means test analyzes random samples of real numbers from two populations with approximately normal distributions.
\n
\nEnter the sample data however you want. The numbers can be separated by almost anything: newlines, spaces, punctuation, or even text. Then select the hypothesized relation and click Analyze.
\n
\nStatistics computed for each sample are: minimum and maximum (useful for checking for data-entry errors), median (50th percentile), mean (average), and standard deviation (the square root of the unbiased variance estimate).
\n
\nThe t test tests an hypothesis about the means of the two populations, µ₁ and µ₂, namely whether the first is less than (or greater than or simply not equal to) the second.
\n
\nActually, two t tests are performed. For the first the null hypothesis is that the two distributions not only have the same mean, but also the same variance. The second tests the means without making that assumption. An F test is presented which tests the assumption that the variances are equal.
  </string> <!--means_help_text-->

  <string name="correlation_help_text">
The Correlation test analyzes a random sample of pairs of real numbers representing two variables (which are referred to as X and Y) from a population with an approximately bivariate normal distribution.
\n
\nEnter the sample data however you want. The numbers can be separated by almost anything: newlines, spaces, punctuation, or even text. Then select the hypothesized relation and click Analyze.
\n
\nSample statistics computed are: mean (average) and standard deviation (the square root of the unbiased variance estimate) for each variable, and Pearson\'s correlation coefficient (r), a measure of the linear dependence of the variables.
\n
\nThe t test tests an hypothesis about the correlation, ρ, namely whether it is less than (or greater than or simply not equal to) zero.
\n
\nThe linear regression estimates the coefficients of the equation Y = α + ßX + ε (where ε is a residual “error” term with a mean of zero) that best fit the data. Both the mean and standard deviation of the estimated coefficients are given as well as the standard deviation of the residual.
  </string> <!--correlation_help_text-->

  <string name="contingency_help_text">
The Contingency Table test analyzes the relation between two categorical variables. Each variable has a small number of possible values and the table contains the counts, i.e. the observed frequency of each combination of values of the variables.
\n
\nEnter the number of rows and columns and the table sample data. The numbers can be separated by almost anything: newlines, spaces, punctuation, or even text. Then click Analyze.
\n
\nThe χ² (Chi-square) test tests the hypothesis that the two variables are independent.
\n
\nFor a 2x2 table the test is one-tailed (because the “direction” of the relation can be inferred from the data). (The probability for a two-tailed test would be twice that reported.) In addition a Fisher\'s “exact” test is presented. (If the sample size is large an equivalent  χ² test with Yate\'s correction is used.) This test is most appropriate when the margins (row and column totals) are considered fixed, but may be too conservative otherwise.
  </string> <!--contingency_help_text-->

  <string name="hypotheses_help_text">
Statistical tests involve hypotheses. Often one wishes to test a new theory against the “conventional wisdom.” The latter implies the “null hypothesis,” denoted H₀; the “alternative hypothesis,” H₁, is that implied by the theory one hopes to verify.
\n
\nMany hypotheses entail one-tailed tests, specifying the direction of a difference, effect, or relationship. So H₁ will involve a &lt; or &gt; relation, and H₀ a ≥ or ≤ relation. In contrast, in a two-tailed test, the H₁ relation is ≠ and the H₀ is =. These remarks apply to the Mean, Means, and Correlation tests. In the case of a 2x2 Contingency table, if the variables are not independent, the relation between them has an implied direction, so a one-tailed is appropriate, but if the table is larger, only a two-tailed test usually makes sense.
\n
\nWhen you have entered the data, selected the appropriate hypotheses, and pressed the Analyze button, the Data Analysis report will display a probability, as well as other information. This is the probability of the observed data occurring by chance under the assumption of the null hypothesis. Prior to running the test, you should have decided on a significance level, typically 0.05 (5%), but sometimes 0.1 or 0.01. If the probability under H₀ is less than this, then H₀ is rejected and the alternative, H₁, is accepted. Otherwise H₀ is not rejected; the evidence for H₁, if any, is not strong enough.
\n
\nHere is an example: In the United States the Democratic party tends to favor fiscal stimulus policies more than the Republican party, so we might conjecture that the annual growth rate of the Gross Domestic Product of the U.S. tends to be higher under Democratic administrations. We collect the real (constant-dollar) GDP numbers (data for 1929-2009 can be found in the Economic Report of the President, available online) and compute the percentage changes. We are comparing two populations, so we choose Means and enter the numbers for Democrats as the first sample and the numbers for Republicans as the second. For our hypotheses, we enter   H₁: µ₁ > µ₂. (The probability turns out to be 0.005, so we can accept this hypothesis with considerable confidence. Of course the reason for this result may turn out to be different than that suggested here.)
  </string> <!--hypotheses_help_text-->

  <string name="about_help_text">
Epsilon Delta Software Development (http://epsilondelta.us)
\nCopyright © 2011 David M. Anderson
\n
\nThis program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.
\n
\nThis program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.
\n
\nYou should have received a copy of the GNU General Public License
along with this program.  If not, see http://www.gnu.org/licenses/.
\n
\nOther licensing terms may be arranged with the author.
  </string> <!--about_help_text-->

</resources>
