<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/contingency_layout"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">
  <LinearLayout android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:orientation="horizontal">
    <TextView android:text="@string/contingency_TableSize"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="@dimen/normalText"
              android:clickable="false"
              android:focusable="false"
              />
    <EditText android:id="@+id/contingency_numRows"
              android:text="2"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="@dimen/normalText"
              android:typeface="monospace"
              android:focusable="true"
              android:focusableInTouchMode="true"
              android:inputType="number"
              />
    <TextView android:text="@string/contingency_x"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="@dimen/normalText"
              android:clickable="false"
              android:focusable="false"
              />
    <EditText android:id="@+id/contingency_numCols"
              android:text="2"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="@dimen/normalText"
              android:typeface="monospace"
              android:focusable="true"
              android:focusableInTouchMode="true"
              android:inputType="number"
              />
    <TextView android:text="@string/contingency_rowsXcols"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="@dimen/normalText"
              android:clickable="false"
              android:focusable="false"
              />
  </LinearLayout>
  <TextView android:text="@string/contingency_sampleDataPrompt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normalText"
            android:layout_weight="0"
            android:clickable="false"
            android:focusable="false"
            />
  <EditText android:id="@+id/contingency_sampleData"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normalText"
            android:typeface="monospace"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/tableSampleHint"
            android:gravity="top"
            />
  <Button android:id="@+id/analyze"
          android:text="@string/Analyze"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="@dimen/normalText"
          android:layout_weight="0"
          android:layout_gravity="center_horizontal"
          android:clickable="true"
          />
</LinearLayout>
