<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/means_layout"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">
  <TextView android:text="@string/means_sample1DataPrompt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normalText"
            android:layout_weight="0"
            android:clickable="false"
            android:focusable="false"
            />
  <EditText android:id="@+id/means_sample1Data"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normalText"
            android:typeface="monospace"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/sampleHint"
            android:gravity="top"
            />
  <TextView android:text="@string/means_sample2DataPrompt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normalText"
            android:layout_weight="0"
            android:clickable="false"
            android:focusable="false"
            />
  <EditText android:id="@+id/means_sample2Data"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normalText"
            android:typeface="monospace"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/sampleHint"
            android:gravity="top"
            />
  <Button android:id="@+id/analyze"
          android:text="@string/Analyze"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="@dimen/normalText"
          android:layout_weight="0"
          android:layout_gravity="center_horizontal"
          android:clickable="true"
          />
</LinearLayout>
