<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/mean_layout"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">
  <TextView android:id="@+id/mean_samplePrompt"
            android:text="@string/mean_sampleDataPrompt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normalText"
            android:layout_weight="0"
            android:clickable="false"
            android:focusable="false"
            />
  <EditText android:id="@+id/mean_sampleData"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="top"
            android:inputType="text|textMultiLine"
            android:textSize="@dimen/normalText"
            android:typeface="monospace"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/sampleHint"
            />
  <LinearLayout android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:orientation="horizontal"
                android:gravity="center_vertical">
    <TextView android:text="@string/mean_H0Prompt"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="@dimen/normalText"
              android:typeface="monospace"
              android:clickable="false"
              android:focusable="false"
              />
    <TextView android:id="@+id/H0Relation"
              android:text="="
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="@dimen/normalText"
              android:typeface="monospace"
              android:clickable="false"
              android:focusable="false"
              />
    <TextView android:id="@+id/mean_H0Mean"
              android:text="0"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="@dimen/normalText"
              android:typeface="monospace"
              android:clickable="false"
              android:focusable="false"
              />
  </LinearLayout>
  <LinearLayout android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:orientation="horizontal"
                android:gravity="center_vertical">
    <TextView android:text="@string/mean_H1Prompt"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="@dimen/normalText"
              android:typeface="monospace"
              android:clickable="false"
              android:focusable="false"
              />
    <Spinner android:id="@+id/H1RelationSpinner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/normalText"
             android:typeface="monospace"
             android:focusable="true"
             android:focusableInTouchMode="true"
             />
    <EditText android:id="@+id/mean_H1Mean"
              android:text="0"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="@dimen/normalText"
              android:typeface="monospace"
              android:focusable="true"
              android:focusableInTouchMode="true"
              android:inputType="number|numberSigned|numberDecimal"
              />
  </LinearLayout>
  <Button android:id="@+id/analyze"
          android:text="@string/Analyze"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="@dimen/normalText"
          android:layout_weight="0"
          android:layout_gravity="center_horizontal"
          android:clickable="true"
          />
</LinearLayout>
